# Antimatter

./: .gitignore  BLOCKCHAIN_INFO.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
antimatter_phenomenology/: __init__.py  asymmetry.py  constants.py  contracts.py  energetics.py  foundation.py  rarity.py  screening.py  transport.py
scripts/: cleanup_generated.py  generate_signature.py  release_check.py  verify_package_identity.py  verify_signature.py
tests/: test_engine.py  test_package_integrity.py
