[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antimatter-phenomenology-engine"
version = "0.3.0"
description = "Educational screening: antimatter rarity, confinement scales, and claim plausibility (not experimental tracking)."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["antimatter_phenomenology*"]
